comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
      <main>
          <header>
-             <h1>Título do Site</h1>
+             <h1>Cursos Grátis</h1>
          </header>
          <article>
-             <h2>Artigo 001</h2>
+             <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quos animi vel consectetur atque, dignissimos inventore facilis architecto! Dolore iure facere delectus alias tempore hic explicabo quis possimus animi magnam.</h2>
              <p>Texto do artigo 001</p>
          </article>
          <article>
