--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      <main>
          <header>
              <h1>Título do Site</h1>
+             <link rel="stylesheet" href="estilos/style.css">
          </header>
          <article>
              <h2>Artigo 001</h2>
