--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Curso em vídeo</title>
+    <title>Cursos Grátis</title>
+    <img src="imagens/curso-em-video-cor.png" alt="Curso em vídeo">
 </head>
 <body>
      <main>
          <header>
-             <h1>Título do Site</h1>
+             <h1>Curso de HTML com CSS3</h1>
+             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
              <link rel="stylesheet" href="estilos/style.css">
          </header>
          <article>
              <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quos animi vel consectetur atque, dignissimos inventore facilis architecto! Dolore iure facere delectus alias tempore hic explicabo quis possimus animi magnam.</h2>
              <p>Texto do artigo 001</p>
+             <p><a href="">Acesse o curso de HTML5</a></p>
          </article>
          <article>
-             <h2>Artigo 002</h2>
-             <p>Texto Artigo 002</p>
+             <h2>Curso de JavaScript</h2>
+             <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quisquam quos ratione ex labore voluptate incidunt vero impedit expedita dolor animi dignissimos officia explicabo aut atque facere. Libero, quo recusandae!</p>
+             <p><a href="">Acesse o curso de JavaScript</a></p>
+
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/riSVzwlSnhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+             <a href="index.html"><img scr="imagens/btn-back.png"alt="Voltar"></a>
          </article>
      </main> 
 </body>
